--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.4.0",
